--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,9 @@
     font-family: 'Roboto', sans-serif;
     font-size: 100%;
   }
+
+  html, body, #root {
+    height: 100%;
+    width: 100%;
+  }
 }
